# okx-gui-market-simulation

./: CMakeLists.txt  Code Review.md  Performance Report.md  README.md
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
src/: client_main.cpp
src/client_trader/: client_trader.h
src/gui/: GUIMain.h  GUIState.h
src/lib/: benchmark.h  utilities.h
src/models/: predict_slippage.py  socket_server.py  train_slippage.py  utils.py
src/models/data/: btc_response_1.json  btc_response_2.json  btc_response_3.json  btc_response_4.json  eth_response_1.json  eth_response_2.json
src/websocket/: websocket.cpp  websocket.h
